--- a/src/Core/composer.json
+++ b/src/Core/composer.json
@@ -34,7 +34,7 @@
         }
     },
     "require": {
-        "php": "^7.4.3 || ^8.0",
+        "php": "^8.1",
         "ext-curl": "*",
         "ext-dom": "*",
         "ext-fileinfo": "*",
@@ -52,7 +52,6 @@
         "ext-zip": "*",
         "ext-zlib": "*",
         "ext-sodium": "*",
-        "aws/aws-sdk-php": "^3.198.5",
         "cocur/slugify": "4.0.0",
         "composer-runtime-api": "^2.0",
         "composer/composer": "^2.2.17",
@@ -66,15 +65,15 @@
         "enqueue/dbal": "~0.10.15",
         "enqueue/redis": "~0.10.9",
         "ezyang/htmlpurifier": "4.13.0",
-        "google/cloud-storage": "~1.25.1",
         "guzzlehttp/guzzle": "~7.4.5",
         "guzzlehttp/psr7": "^1.8.0",
         "jdorn/sql-formatter": "1.2.17",
         "lcobucci/jwt": "~4.1.5",
-        "league/flysystem": "~1.1.4",
-        "league/flysystem-aws-s3-v3": "~1.0.29",
-        "league/flysystem-memory": "~1.0.2",
-        "league/oauth2-server": "~8.3.2",
+        "league/flysystem": "~3.10",
+        "league/flysystem-async-aws-s3": "~3.10",
+        "league/flysystem-google-cloud-storage": "~3.10",
+        "league/flysystem-memory": "~3.10",
+        "league/flysystem-path-prefixing": "~3.10",
         "marc1706/fast-image-size": "1.1.6",
         "nyholm/psr7": "1.4.0",
         "psr/cache": "1.0.1",
@@ -85,7 +84,6 @@
         "sensio/framework-extra-bundle": "~6.2.1",
         "shopware/conflicts": "*",
         "sroze/messenger-enqueue-transport": "0.4.0",
-        "superbalist/flysystem-google-storage": "~7.2.2",
         "symfony/asset": "~6.1.0",
         "symfony/cache": "~6.1.0",
         "symfony/cache-contracts": "~3.1.0",
