--- a/composer.json
+++ b/composer.json
@@ -68,16 +68,15 @@
         "setasign/fpdi": "2.3.6",
         "elasticsearch/elasticsearch": "7.16.0",
         "enqueue/dbal": "~0.10.15",
-        "ezyang/htmlpurifier": "4.13.0",
+        "ezyang/htmlpurifier": "~4.16",
         "guzzlehttp/guzzle": "~7.4.5",
         "guzzlehttp/psr7": "^1.8.0",
         "jdorn/sql-formatter": "1.2.17",
         "lcobucci/jwt": "~4.1.5",
-        "league/flysystem": "~3.10",
+        "league/flysystem": "~3.10.3",
         "league/flysystem-async-aws-s3": "~3.10",
         "league/flysystem-google-cloud-storage": "~3.10",
         "league/flysystem-memory": "~3.10",
-        "league/flysystem-path-prefixing": "~3.10",
         "league/oauth2-server": "~8.3.2",
         "meyfa/php-svg": "~0.11.3",
         "nyholm/psr7": "1.4.0",
@@ -111,6 +110,7 @@
         "symfony/http-kernel": "~6.1.0",
         "symfony/mailer": "~6.1.0",
         "symfony/messenger": "~6.1.0",
+        "symfony/proxy-manager-bridge": "~6.1.0",
         "symfony/mime": "~6.1.0",
         "symfony/monolog-bridge": "~6.1.0",
         "symfony/monolog-bundle": "~3.8.0",
