--- a/src/Core/composer.json
+++ b/src/Core/composer.json
@@ -54,7 +54,7 @@
         "ext-sodium": "*",
         "cocur/slugify": "4.0.0",
         "composer-runtime-api": "^2.0",
-        "composer/composer": "^2.2.17",
+        "composer/composer": "^2.4.4",
         "composer/semver": "^3.2",
         "doctrine/annotations": "1.13.1",
         "doctrine/dbal": "~3.5",
@@ -64,26 +64,25 @@
         "setasign/fpdi": "2.3.6",
         "enqueue/dbal": "~0.10.15",
         "enqueue/redis": "~0.10.9",
-        "ezyang/htmlpurifier": "4.13.0",
+        "ezyang/htmlpurifier": "~4.16",
         "guzzlehttp/guzzle": "~7.4.5",
         "guzzlehttp/psr7": "^1.8.0",
         "jdorn/sql-formatter": "1.2.17",
         "lcobucci/jwt": "~4.1.5",
-        "league/flysystem": "~3.10",
+        "league/flysystem": "~3.10.3",
         "league/flysystem-async-aws-s3": "~3.10",
         "league/flysystem-google-cloud-storage": "~3.10",
         "league/flysystem-memory": "~3.10",
-        "league/flysystem-path-prefixing": "~3.10",
         "marc1706/fast-image-size": "1.1.6",
         "nyholm/psr7": "1.4.0",
-        "psr/cache": "1.0.1",
+        "psr/cache": "~3.0.0",
         "psr/event-dispatcher": "1.0.0",
         "psr/http-factory": "1.0.1",
         "psr/http-message": "1.0.1",
         "psr/log": "1.1.2",
         "sensio/framework-extra-bundle": "~6.2.1",
         "shopware/conflicts": "*",
-        "sroze/messenger-enqueue-transport": "0.4.0",
+        "sroze/messenger-enqueue-transport": "~0.6.0",
         "symfony/asset": "~6.1.0",
         "symfony/cache": "~6.1.0",
         "symfony/cache-contracts": "~3.1.0",
