--- a/.github/workflows/02-unit.yml
+++ b/.github/workflows/02-unit.yml
@@ -48,34 +48,38 @@ jobs:
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
-        if: matrix.php-version != '8.0'
+        if: matrix.php-version != '8.1'
         with:
           php-version: ${{ matrix.php-version }}
           coverage: none
 
       - name: Setup PHP with Coverage
         uses: shivammathur/setup-php@v2
-        if: matrix.php-version == '8.0'
+        if: matrix.php-version == '8.1'
         with:
           php-version: ${{ matrix.php-version }}
           coverage: xdebug
+
+      - name: Configure for PHP 8.2
+        run: composer config platform.php 8.1.99
+        if: matrix.php-version == '8.2'
 
       - name: Setup Composer
         run: |
           composer install
 
       - name: Run PHPUnit
-        if: matrix.php-version != '8.2'
+        if: matrix.php-version != '8.1'
         run: |
           for TEST_SUITE in $TEST_SUITES; do php -d memory_limit=-1 vendor/bin/phpunit --configuration phpunit.xml.dist --exclude-group "needsWebserver,quarantined" --testsuite "$TEST_SUITE"; done
 
       - name: Run PHPUnit with XDebug
-        if: matrix.php-version == '8.2'
+        if: matrix.php-version == '8.1'
         run: |
           for TEST_SUITE in $TEST_SUITES; do php -d memory_limit=-1 -d pcov.enabled=1 -d pcov.directory=$PWD/src -d pcov.exclude='~(vendor|Test|node_modules)~' vendor/bin/phpunit --configuration phpunit.xml.dist --exclude-group "needsWebserver,quarantined"  --testsuite "$TEST_SUITE" --coverage-cobertura "phpunit.coverage.$TEST_SUITE.xml"; done
 
       - uses: codecov/codecov-action@v2
-        if: matrix.php-version == '8.2'
+        if: matrix.php-version == '8.1'
         with:
           files: ./phpunit.coverage.administration.xml,./phpunit.coverage.storefront.xml,./phpunit.coverage.checkout.xml,./phpunit.coverage.content.xml,./phpunit.framework.administration.xml,./phpunit.coverage.profiling.xml,./phpunit.coverage.migration.xml,./phpunit.coverage.system.xml,./phpunit.coverage.elasticsearch.xml,./phpunit.coverage.docs.xml,./phpunit.coverage.unit.xml,./phpunit.coverage.integration.xml
   admin:
